--- a/w1/class/index.html
+++ b/w1/class/index.html
@@ -1,14 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Jay Validzic">
-    <meta name="description" content="HTML5 and Javascript Week 1">
-    <title>Week 1</title>
-</head>
-<body>
-    <p>
-        Hello world!
-    </p>
-</body>
+<html>
+    <head>
+        <title>My Website</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <h1>
+           All about me. 
+        </h1>
+        <p>
+            My name is Jay and my favorite animals are sharks.
+        </p>
+        <h2>
+            Links:
+        </h2>
+        <a href="https://www.google.com">Google is great for research</a>
+        <h2>
+            Image!
+        </h2>
+        <p>    
+            <img src="neitlogo.webp" alt="The logo of our school">
+        </p>
+        <div id ="ghosts">
+            <p>OoOoOoOoOoOo ghost noises</p>
+        </div>
+    </body>
 </html>
