--- a/w1/homework/index.html
+++ b/w1/homework/index.html
@@ -6,14 +6,14 @@
     <body id="body">
         <div id="welcome">
             <h1>
-                All about me!
+                All About Me!
             </h1>
         </div>
         <div id="introduction">
-            My name is Jay Validzic. I am from Cumberland, Rhode Island and I'm a commuter student. I live with my dad, my younger brother, and my dog Buddy. My hobbies consist mainly of thrifting, cooking, baking, and gaming. I like to collect little trinkets from blind boxes and from the thrift stores, mainly collecting Sanrio, Marvel, Monster High, and Hirono.
+            My name is Jay Validzic. I am from Cumberland, Rhode Island and I'm a commuter student. I live with my dad, my younger brother, and my dog Buddy. My hobbies consist mainly of cooking, baking, and gaming. I like to collect little trinkets from blind boxes and from the thrift stores, mainly collecting Sanrio, Marvel, Monster High, and Hirono.
         </div>
         <div id="images">
-            <img src="buddyphoto.jpg" alt="A photo of my dog, Buddy">
+            <img src="buddyphoto.jpg" width="500" height="750" alt="A photo of Buddy, who is a manchester terrier and mini pinscher mix">
         </div>
 
         </div>
@@ -36,6 +36,12 @@
             </h2>
             <div id="lie">
                 1. My favorite holiday is Christmas. I love the comforting feeling of being with family and a nice cup of hot chocolate to fight away the bitter cold.
+            </div>
+            <div id="trutha">
+                2. I like to thrift things, mainly old toys and stuffed animals. I restore them because I don't see them as trash, I see them as stories.
+            </div>
+            <div id="truthb">
+                3. I am named after the blue jay, which represents intelligence, creativity, and freedom. "Blue Jay" is actually my nickname.
             </div>
         </div>
     </body>
