--- a/w1/homework/index.html
+++ b/w1/homework/index.html
@@ -10,7 +10,7 @@
             </h1>
         </div>
         <div id="introduction">
-            My name is Jay Validzic. I am from Cumberland, Rhode Island and I'm a commuter student. I live with my dad, my younger brother, and my dog Buddy. My hobbies consist mainly of cooking, baking, and gaming. I like to collect little trinkets from blind boxes and from the thrift stores, mainly collecting Sanrio, Marvel, Monster High, and Hirono.
+            My name is Jay Validzic. I am from Cumberland, Rhode Island and I'm a commuter student. I live with my dad, my younger brother, and my dog Buddy. I am a pagan, meaning a lot of my sabbaths (holidays) are different from everyone else's. My hobbies consist mainly of cooking, baking, and gaming. I like to collect little trinkets from blind boxes and from the thrift stores, mainly collecting Sanrio, Marvel, Monster High, and Hirono.
         </div>
         <div id="images">
             <img src="buddyphoto.jpg" width="500" height="750" alt="A photo of Buddy, who is a manchester terrier and mini pinscher mix">
@@ -35,7 +35,7 @@
                 Two Truths and a Lie
             </h2>
             <div id="lie">
-                1. My favorite holiday is Christmas. I love the comforting feeling of being with family and a nice cup of hot chocolate to fight away the bitter cold.
+                1. My favorite holiday is Yule (Christmas). I love the comforting feeling of being with family and a nice cup of hot chocolate to fight away the bitter cold.
             </div>
             <div id="trutha">
                 2. I like to thrift things, mainly old toys and stuffed animals. I restore them because I don't see them as trash, I see them as stories.
@@ -43,6 +43,17 @@
             <div id="truthb">
                 3. I am named after the blue jay, which represents intelligence, creativity, and freedom. "Blue Jay" is actually my nickname.
             </div>
+        </div>
+        <div id="answer">
+            <h1>
+                Answer
+            </h1>
+            <h1>
+                🥁🥁🥁
+            </h1>
+            <p>
+                Number 1 is the lie. My favorite holidays are actually Samhain (Halloween) and Mabon (Autumn Equinox). Autumn is my favorite season due to all the colors in the trees.
+            </p>
         </div>
     </body>
 </html>
